--- a/blog/templates/base_auth.html
+++ b/blog/templates/base_auth.html
@@ -1,55 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+  </head>
 
-</head>
-
-<body style="background-color:#DCDCDC;">
+  <body style="background-color: #dcdcdc">
     <header class="p-3 text-bg-light border-bottom mb-3">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/blog/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Logo_Global_NTT_DATA_Future_Blue_RGB.png"
-                        height="40px" alt="NTT DATA">
-                </a>
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/blog/" class="nav-link px-2 text-secondary">首頁</a></li>
-                    <li><a href="/blog/detail" class="nav-link px-2 text-secondary">瀏覽文章</a></li>
-                    <li><a href="/blog/pub_blog" class="nav-link px-2 text-secondary">發佈博客</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">設備清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">分行清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">關於</a></li>
-                </ul>
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-                <div class="text-end">
-                    <a href="login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
-                    <a href="register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
-                </div>
-            </div>
+      <div class="container">
+        <div
+          class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+        >
+          <a
+            href="/blog/"
+            class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
+          >
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/6/67/Logo_Global_NTT_DATA_Future_Blue_RGB.png"
+              height="40px"
+              alt="NTT DATA"
+            />
+          </a>
+          <ul
+            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+          >
+            <li>
+              <a href="/blog/" class="nav-link px-2 text-secondary">首頁</a>
+            </li>
+            <li>
+              <a href="/blog/detail" class="nav-link px-2 text-secondary"
+                >瀏覽文章</a
+              >
+            </li>
+            <li>
+              <a href="/blog/pub_blog" class="nav-link px-2 text-secondary"
+                >發佈博客</a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav-link px-2 text-secondary">設備清單</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link px-2 text-secondary">分行清單</a>
+            </li>
+            <li><a href="#" class="nav-link px-2 text-secondary">關於</a></li>
+          </ul>
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+            <input
+              type="search"
+              class="form-control form-control-dark text-bg-light"
+              placeholder="Search..."
+              aria-label="Search"
+            />
+          </form>
+          <div class="text-end">
+            <a
+              href="login"
+              class="btn btn-outline-primary me-2"
+              role="button"
+              aria-disabled="true"
+              >Login</a
+            >
+            <a
+              href="register"
+              class="btn btn-outline-warning"
+              role="button"
+              aria-disabled="true"
+              >Register</a
+            >
+          </div>
         </div>
+      </div>
     </header>
     <main class="container bg-white rounded p-3">
-        {% block main %}{% endblock %}
+      {% block main %}{% endblock %}
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
+      integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
