--- a/blog/templates/blog_auth/register.html
+++ b/blog/templates/blog_auth/register.html
@@ -8,7 +8,7 @@
 
         <div class="mt-2">
             <label for="username">用戶名</label>
-            <input type="text" class="form-control" name="username" id="email" placeholder="請輸入郵箱">
+            <input type="text" class="form-control" name="username" id="username" placeholder="請輸入用戶名">
         </div>
         <div class="mt-2">
             <label for="email">郵箱</label>
@@ -26,7 +26,7 @@
             <div class="input-group my-3">
                 <label for="code"></label>
                 <input type="text" class="form-control" name="code" id="code" placeholder="驗證碼">
-                <button class="btn btn-outline-secondary" type="button">獲取驗證碼</button>
+                <button class="btn btn-outline-secondary" type="button" id='captcha-btn'>獲取驗證碼</button>
             </div>
         </div>
         <div class="mt-3">
@@ -36,5 +36,40 @@
 </form>
 
 </div>
+<script>
 
+const email = document.querySelector('#email')
+const btn = document.querySelector('#captcha-btn')
+let countdownInterval;
+let timeLeft = 60;
+function startCountdown(){
+// 禁用按鈕
+    btn.disabled = true;
+    btn.textContent = `重新發送(${timeLeft}s)`;
+// 開始倒數計時
+    countdownInterval = setInterval(()=>{
+        timeLeft--;
+        btn.textContent = `重新發送(${timeLeft}s)`;
+        // 倒數結束
+        if(timeLeft < 0){
+            clearInterval(countdownInterval);
+            btn.disabled = false;
+            btn.textContent = '獲取驗證碼';
+            timeLeft = 60;
+        }
+    }, 1000); 
+}
+
+btn.addEventListener('click', function(e){
+    if(!email.value){
+        alert('請輸入郵箱')
+    } else {
+        // 取消按鈕的點擊事件
+        alert('獲取驗證碼')
+        startCountdown();
+    }
+
+}, false)
+    
+</script>
 {% endblock %}
