--- a/blog/templates/blog_auth/login.html
+++ b/blog/templates/blog_auth/login.html
@@ -4,6 +4,7 @@
 <div style="width: 330px" class="m-auto">
   <h1>登入</h1>
   <form action="login" method="post">
+  {% csrf_token %}
     <div class="mt-2">
       <label for="email">郵箱</label>
       <input
@@ -25,9 +26,14 @@
       />
     </div>
     <div class="form-check mt-2">
-      <input class="form-check-input" type="checkbox" value="" id="remember" />
+      <input class="form-check-input" type="checkbox" value="1" name="remember" id="remember" />
       <label class="form-check-label" for="remember"> 記住我 </label>
     </div>
+    {% if message %}
+    <div class="alert alert-danger" role="alert">
+      {{ message }}
+    </div>
+    {% endif %}
     <div class="mt-3">
       <button class="btn btn-primary w-100">立即登入</button>
     </div>
