--- a/blog/templates/base_auth.html
+++ b/blog/templates/base_auth.html
@@ -10,6 +10,23 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <!-- Wang Editor 5 文字編輯器 CSS -->
+    <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet" />
+    <style>
+        #editor—wrapper {
+            border: 1px solid #ccc;
+            z-index: 100;
+            /* 按需定义 */
+        }
+
+        #toolbar-container {
+            border-bottom: 1px solid #ccc;
+        }
+
+        #editor-container {
+            height: 300px;
+        }
+    </style>
   </head>
 
   <body style="background-color: #dcdcdc">
@@ -45,6 +62,11 @@
               >
             </li>
             <li>
+              <a href="/blog/blog_category_add" class="nav-link px-2 text-secondary"
+                >新增博客類別</a
+              >
+            </li>
+            <li>
               <a href="#" class="nav-link px-2 text-secondary">設備清單</a>
             </li>
             <li>
@@ -73,14 +95,14 @@
           {% else %}
           <div class="text-end">
             <a
-              href="login"
+              href="/auth/login"
               class="btn btn-outline-primary me-2"
               role="button"
               aria-disabled="true"
               >Login</a
             >
             <a
-              href="register"
+              href="/auth/register"
               class="btn btn-outline-warning"
               role="button"
               aria-disabled="true"
