--- a/front-end/vue-swiper/src/assets/music163-css/common.css
+++ b/front-end/vue-swiper/src/assets/music163-css/common.css
@@ -67,3 +67,113 @@
     right: 0px;
     top: 10px;
 }
+
+.topbar-right {
+    display: flex;
+    align-items: center;
+}
+
+.topbar-right .search {
+    width: 158px;
+    height: 32px;
+    border: 1px solid black;
+    background-color: #FFFFFF;
+    border-radius: 32px;
+    background-image: url("../music163-topbar-logo.png");
+    background-position: 0 -99px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 7px;
+}
+
+.topbar-right .search input {
+    width: 116px;
+    border-radius: 32px;
+    position: absolute;
+    font-size: 12px;
+}
+
+.topbar-right .search input:focus {
+    
+}
+
+
+.topbar-right .login {
+    margin: 0 20px;
+    
+    background-image: url("../music163-topbar-logo.png");
+    background-position: right -47px;
+    
+}
+
+.topbar-right .login a {
+    color: #787878;
+    
+    
+}
+
+.topbar-right .login a:hover {
+    text-decoration: underline;
+    color: #999;
+}
+
+.topbar-right .author {
+    margin: 0 0 0 10px;
+}
+.topbar-right .author a {
+    color: #ccc;
+    border-radius: 20px;
+    display: inline-block;
+    width: 90px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    box-sizing: border-box;
+    border: 1px solid #424242;
+}
+
+.topbar-right .author a:hover {
+    color: #FFF;
+    border: 1px solid #FFFFFF;
+}
+
+
+.topnav {
+    background-color: #C20C0C;
+    
+    height: 35px;
+    
+}
+
+.topnav .container {
+    width: 720px;
+    height: 35px;
+    line-height: 35px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: flex-start;
+    box-sizing: border-box;
+}
+
+
+.topnav .container .item a { 
+    color: #FFF;
+    margin: 0 10px 0 30px;
+    padding: 13px;
+}
+
+.topnav .container .spec-active a  { 
+    border: 2px solid #9B0909;
+    background-color: #9B0909;
+    border-radius: 20px;
+    padding: 0 13px;
+
+}
+
+.topnav .container .item a:hover { 
+    border: 2px solid #9B0909;
+    background-color: #9B0909;
+    border-radius: 20px;
+    padding: 0 13px;
+}
